2003-08-01  Tim Legant  <tim@catseye.net>

	* Util.py (msg_from_file): When parsing a message with the
	HeaderParser, add a "custom" attribute to the Message object
	called 'header_parsed'.  If it exists and is True (1), then the
	Message was read and parsed by HeaderParser.

	(msg_as_string): AutoResponse.py and Pending.py use fully parsed
	MIME messages, so HeaderParsedGenerator won't work for those
	messages.  Made msg_as_string sensitive to 'header_parsed'
	attribute of Message, defined in Util.msg_from_file.

2003-07-31  Tim Legant  <tim@catseye.net>

	* Util.py (msg_as_string): Use HeaderParsedGenerator rather than
	the standard Generator, which fails on messages parsed with
	HeaderParser.

2003-07-18  Tim Legant  <tim@catseye.net>

	* MTA.py (MTA.deliver, MTA.stop, Qmail.deliver): Added support for
	the delivery when Defaults.DELIVERY = '_filter_'.

	* Deliver.py (Deliver.get_instructions, Deliver.deliver): Added
	support for the '_filter_' style of delivery, where the message is
	simply piped to stdout.

2003-07-11  Tim Legant  <tim@catseye.net>

	* Defaults.py: New variables DB_BARE_APPEND and
	DB_CONFIRM_APPEND.

	* FilterParser.py (FilterParser): Removed {from,to}-mysql code.
	Moved __create_sql_params method to module-level function
	create_sql_params.  Removed -domains argument and always add the
	domains into the keys.  Made the domains list contain only unique
	domains.

	* Util.py (db_insert): New function, used by the DB_BARE_APPEND
	and DB_CONFIRM_APPEND code.

2003-07-01  Tim Legant  <tim@catseye.net>

	* Util.py (filter_match): Create FilterParser with DB_CONNECTION.

	* FilterParser.py (FilterParser): Fixed two regular expressions
	that were too "greedy".
	(__create_sql_params, __create_sql_criteria, __get_column_index):
	New SQL support functions.
	(__search_sql): Main SQL searching function.
	(firstmatch): Added from-sql/to-sql rules.  Should work for any
	SQL database that has a Python DB API 2.0 module.
