@@ -1,3 +1,8 @@
+2003-08-19  Jason R. Mastaler  <jason@mastaler.com>
+
+	* tmda-rfilter (main): Support confirm=template FILTER_INCOMING
+	instructions.
+	
 2003-07-18  Tim Legant  <tim@catseye.net>
 
 	* tmda-rfilter (opt processing): Added '-p/--print' option to
