@@ -1,3 +1,8 @@
+2003-08-19  Jason R. Mastaler  <jason@mastaler.com>
+
+	* FilterParser.py (_FilterFile.__init__): confirm can now take an
+	option, which is the path to a specific template.
+
 2003-08-01  Tim Legant  <tim@catseye.net>
 
 	* Util.py (msg_from_file): When parsing a message with the
